--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -15,3 +15,5 @@ spec:
       containers:
       - name: argocd-app-container
         image: nanajanashia/argocd-app:1.0
+        ports:
+        - containerPort: 9000
